--- a/Article/Article.less
+++ b/Article/Article.less
@@ -1,5 +1,6 @@
 .articles {
   margin-top: 95px;
+  padding-top: 20px;
 }
 .article {
   margin: 20px 10%;
@@ -11,11 +12,14 @@
   height: 50px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
+  font-family: 'Roboto';
 
   h2 {
     font-size: 28px;
     padding: 0;
     margin: 15px 0 0;
+    font-family: 'Roboto';
+    font-weight: 500;
   }
 
   .date {
