--- a/CSS/index.css
+++ b/CSS/index.css
@@ -17,19 +17,33 @@
   font-weight: 700;
   src: local('Roboto Bold'), local('Roboto-Bold'), url(https://fonts.gstatic.com/s/roboto/v19/KFOlCnqEu92Fr1MmWUlfBBc9.ttf) format('truetype');
 }
+@font-face {
+  font-family: 'Cormorant Garamond';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Cormorant Garamond Regular'), local('CormorantGaramond-Regular'), url(https://fonts.gstatic.com/s/cormorantgaramond/v6/co3bmX5slCNuHLi8bLeY9MK7whWMhyjYqXtP.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptug8zYS_SKggPNyC0ISg.ttf) format('truetype');
+}
 /* Below this line is where you will start your work */
 /* It is important to note, you will not be writing any CSS in this file*/
 .header {
   width: 100%;
   height: 75px;
-  background-color: #388E3C;
+  background-color: #771212;
   color: white;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   position: fixed;
   top: 0;
   z-index: 2;
+  padding: 20px 0px;
 }
 .header h1 {
   margin: 0;
@@ -48,8 +62,8 @@
   width: 350px;
   height: 100vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
-  background-color: #81C784;
-  border: 1px solid #004D40;
+  background-color: #c78184;
+  border: 1px solid #4d0000;
   border-left: none;
   border-bottom: none;
   z-index: 2;
@@ -66,6 +80,7 @@
 }
 .articles {
   margin-top: 95px;
+  padding-top: 20px;
 }
 .article {
   margin: 20px 10%;
@@ -77,11 +92,14 @@
   height: 50px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
+  font-family: 'Roboto';
 }
 .article h2 {
   font-size: 28px;
   padding: 0;
   margin: 15px 0 0;
+  font-family: 'Roboto';
+  font-weight: 500;
 }
 .article .date {
   margin: 0;
@@ -113,6 +131,6 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto';
+  font-family: 'Cormorant Garamond', serif;
   background-color: #fffef7;
 }
