--- a/Header/Header.less
+++ b/Header/Header.less
@@ -1,14 +1,16 @@
 .header {
   width: 100%;
   height: 75px;
-  background-color: #388E3C;
+  background-color: rgb(119, 18, 18);
   color: white;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   position: fixed;
   top: 0;
   z-index: 2;
+  padding: 20px 0px;
 
   h1 {
     margin: 0;
