--- a/LESS/index.less
+++ b/LESS/index.less
@@ -1,6 +1,6 @@
 /* This line is importing the font 'Roboto'. DO NOT change line 2*/
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,700");
-
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond|Raleway');
 /* Below this line is where you will start your work */
 /* It is important to note, you will not be writing any CSS in this file*/
 @import '../Header/Header.less';
@@ -9,6 +9,6 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto';
+  font-family: 'Cormorant Garamond', serif;
   background-color: #fffef7;
 }
